[project]
name = "ai-engineering-lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "litellm>=1.90.3",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
]
